--- a/Lynn_resume_main.html
+++ b/Lynn_resume_main.html
@@ -41,7 +41,7 @@ homepage
 
 <h2> Lynn Bradford </h2>
 <p></p>
-<p> <img src="C:\Users\TechFoundry19\Desktop\New folder\Lynn1.jpg" width="130" height="90" alt "23 year old woman" > LBradford2012@gmail.com  (413) 783-7921 </img> </p> 
+<p> <img src="C:\Users\TechFoundry19\Desktop\New folder\Lynn1.jpg" width="130" height="90" alt "23 year old woman" > </img> </p> 
 <nav>
 <ul>
 <li><a href="#profile">Profile</a></li>
